--- a/unbooked-backend/package.json
+++ b/unbooked-backend/package.json
@@ -9,9 +9,10 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"chanfana": "^2.0.2",
-		"hono": "^4.4.7",
-		"zod": "^3.23.8"
+		"@11labs/react": "^0.1.3",
+		"chanfana": "^2.8.0",
+		"hono": "^4.7.7",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250327.0",
