--- a/unbooked-frontend/package.json
+++ b/unbooked-frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@11labs/react": "^0.1.3",
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
@@ -12,9 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
