--- a/unbooked-frontend/.gitignore
+++ b/unbooked-frontend/.gitignore
@@ -15,6 +15,8 @@
 .DS_Store
 .env
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
@@ -22,3 +24,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# env files
+src/.env.production
+src/.env.development
+src/.env
